--- a/azure_provision.yaml
+++ b/azure_provision.yaml
@@ -6,22 +6,68 @@
   gather_facts: False
   vars:
     resource_group: Test_Group_Tower
-    name: testVM001
+    vm_name: testVM001
     offer: CentOS
 
   tasks:
+
+  - name: Create storage account
+    azure_rm_storageaccount:
+      resource_group: "{{ resource_group }}"
+      name: testaccount001
+      account_type: Standard_LRS
+
+  - name: Create virtual network
+    azure_rm_virtualnetwork:
+      resource_group: "{{ resource_group }}"
+      name: testvn001
+      address_prefixes: "10.10.0.0/16"
+  
+  - name: Add subnet
+    azure_rm_subnet:
+      resource_group: "{{ resource_group }}"
+      name: subnet001
+      address_prefix: "10.10.0.0/24"
+      virtual_network: testvn001
+  
+  - name: Create public ip
+    azure_rm_publicipaddress:
+      resource_group: "{{ resource_group }}"
+      allocation_method: Static
+      name: publicip001
+  
+  - name: Create security group that allows SSH
+    azure_rm_securitygroup:
+      resource_group: "{{ resource_group }}"
+      name: secgroup001
+      rules:
+        - name: SSH
+          protocol: Tcp
+          destination_port_range: 22
+          access: Allow
+          priority: 101
+          direction: Inbound
+  
+  - name: Create NIC
+    azure_rm_networkinterface:
+      resource_group: "{{ resource_group }}"
+      name: testnic001
+      virtual_network: testvn001
+      subnet: subnet001
+      public_ip_name: publicip001
+      security_group: secgroup001
   
   - name: Create virtual machine
     azure_rm_virtualmachine:
-      #resource_group: "{{ resource_group }}"
-      name: "{{ name }}"
+      resource_group: "{{ resource_group }}"
+      name: "{{ vm_name }}"
       vm_size: Standard_D1
-      #storage_account: testaccount001
-      #storage_container: testvm001
-      #storage_blob: testvm001.vhd
+      storage_account: testaccount001
+      storage_container: testvm001
+      storage_blob: testvm001.vhd
       admin_username: admin
       admin_password: Password!
-      #network_interfaces: testnic001
+      network_interfaces: testnic001
       image:
         offer: "{{ offer }}"
         publisher: OpenLogic
