--- a/azure_provision.yaml
+++ b/azure_provision.yaml
@@ -37,7 +37,7 @@
   - name: Create virtual network
     azure_rm_virtualnetwork:
       resource_group: "{{ resource_group }}"
-      name: "{{ vm_name }}"
+      name: testvn001
       address_prefixes: "10.10.0.0/16"
   
   - name: Add subnet
