--- a/azure_provision.yaml
+++ b/azure_provision.yaml
@@ -81,7 +81,7 @@
       vm_size: Standard_D1
       storage_account: "{{ vm_name }}"
       storage_container: "{{ vm_name }}"
-      storage_blob: '"{{ vm_name}}".vhd'
+      storage_blob: "{{ vm_name }}.vhd"
       admin_username: devops
       admin_password: "{{ admin_password }}"
       network_interfaces: "{{ vm_name }}"
